# AI-FOR-BLIND

./: .renderignore  Dockerfile  base64.txt  connections.txt  esp32-ai-thinker.ino  pyproject.toml  render.yaml  requirements.txt  server.py  server_env.py  test_image_encode.py  valid_base64.txt
