[project]
name = "ai-for-blind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.27.0",
    "fastapi>=0.128.0",
    "google-genai>=1.56.0",
    "pillow>=12.0.0",
    "python-multipart>=0.0.21",
    "pyttsx3>=2.99",
    "uvicorn>=0.40.0",
]
